[package]
name = "boids-tower-defense"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "boids-tower-defense"

[dependencies]
bevy = "0.10.0"
config = { version = "0.13.3", features = ["ron"] }
itertools = "0.10.5"
leafwing-input-manager = "0.9.0"
lerp = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0.153", features = ["derive"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
